# ml-work

./: .cache.sqlite  .gitignore  README.md  README_副本.md  pyproject.toml
data/: scaler.pkl  test_new.csv  train_new.csv
notebooks/: data_preprocessing.ipynb  lstm_model.ipynb  mtlfa_model.ipynb  transformer_model.ipynb
scripts/: train.sh  train_lstm.sh  train_mltfs.sh
src/: train.py  utils.py
src/data_loader/: lstm_data_loader.py  mtlfs_data_loader.py
src/data_process/: .cache.sqlite  data_preprocessing.py  test_data_preprocess.py
src/models/lstm/: lstm_model.py
src/models/our/: mtlfs_model.py
src/training/: train_lstm.py  train_mtlfs.py
